[DDW-345] Fix Ada Redemption styling issues - Part 2

--- a/source/renderer/app/components/staking/redeem-itn-rewards/Step2ConfirmationDialog.scss
+++ b/source/renderer/app/components/staking/redeem-itn-rewards/Step2ConfirmationDialog.scss
@@ -32,15 +32,15 @@
     color: var(--theme-staking-redeemItnRewards-attention-text-color);
   }
 }
-.sectionOpacity {
-  > div:last-child {
-    opacity: 0.5;
-  }
-}
+// .sectionOpacity {
+//   > div:last-child {
+//     // opacity: 0.5;
+//   }
+// }
 
 .to {
   @extend .section;
-  @extend .sectionOpacity;
+  // @extend .sectionOpacity;
 }
 .rewardsTotal {
   @extend .section;
