[DDW-349] Move logic into dedicated Container/Component

--- a/source/renderer/app/components/staking/redeem-itn-rewards/Step1ConfigurationDialog.scss
+++ b/source/renderer/app/components/staking/redeem-itn-rewards/Step1ConfigurationDialog.scss
@@ -1,7 +1,6 @@
 @import '../../../themes/mixins/error-message';
 .component {
-  .description,
-  .redemptionUnavailable {
+  .description {
     font-family: var(--font-regular);
     font-size: 16px;
     line-height: 1.38;
