DDW-296 Deadalus review fixes

--- a/source/renderer/app/components/staking/stake-pools/StakePoolsSearch.scss
+++ b/source/renderer/app/components/staking/stake-pools/StakePoolsSearch.scss
@@ -44,6 +44,10 @@
 .clearSearch {
   margin-top: -2px;
 
+  > div > div {
+    margin-left: -15px !important;
+  }
+
   button {
     background-color: var(
       --theme-staking-stake-pools-search-clear-button-background-color
