DDW-296 Deadalus review fixes

--- a/source/renderer/app/components/wallet/settings/ChangeSpendingPasswordDialog.scss
+++ b/source/renderer/app/components/wallet/settings/ChangeSpendingPasswordDialog.scss
@@ -3,12 +3,23 @@
 
 .dialog {
   font-family: var(--font-light);
+
   .spendingPasswordFields {
     transition: all 400ms ease;
 
     .newPassword,
     .currentPassword {
       margin-bottom: 20px;
+
+      input {
+        padding-top: 10px;
+      }
+    }
+
+    .repeatedPassword {
+      input {
+        padding-top: 10px;
+      }
     }
 
     .passwordInstructions {
