DDW-296 Deadalus review fixes

--- a/source/renderer/app/components/staking/delegation-setup-wizard/DelegationStepsConfirmationDialog.scss
+++ b/source/renderer/app/components/staking/delegation-setup-wizard/DelegationStepsConfirmationDialog.scss
@@ -3,6 +3,10 @@
 @import '../../../themes/mixins/error-message';
 
 .delegationStepsConfirmationDialogWrapper {
+  .delegationStepsIndicatorWrapper {
+    margin-top: 2px;
+  }
+
   .content {
     .description {
       color: var(--theme-delegation-steps-confirmation-description-color);
