DDW-296 Deadalus review fixes

--- a/source/renderer/app/components/staking/delegation-center/WalletRow.scss
+++ b/source/renderer/app/components/staking/delegation-center/WalletRow.scss
@@ -28,6 +28,10 @@
   }
 
   .left {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+
     .title {
       @extend %accentText;
       margin-bottom: 3px;
