[DDW-317]: Update sandclock icon to no data dash

--- a/source/renderer/app/components/staking/widgets/ThumbSelectedPool.scss
+++ b/source/renderer/app/components/staking/widgets/ThumbSelectedPool.scss
@@ -74,7 +74,7 @@
   }
 }
 
-.sandClockIcon {
+.noDataDashIcon {
   path {
     stroke: var(--theme-staking-stake-pool-grey-color) !important;
     fill: var(--theme-staking-stake-pool-grey-color) !important;
