[DDW-317]: Update stake pool tile style

--- a/source/renderer/app/components/staking/widgets/ThumbPool.scss
+++ b/source/renderer/app/components/staking/widgets/ThumbPool.scss
@@ -13,7 +13,7 @@
 
 .content {
   background-color: var(--theme-staking-stake-pool-background-color);
-  border: solid 1px var(--theme-staking-stake-pool-border-color);
+  border: 1px solid var(--theme-staking-stake-pool-border-color);
   border-radius: 4px;
   cursor: pointer;
   height: 71px;
