--- a/source/renderer/app/components/staking/widgets/TooltipPool.scss
+++ b/source/renderer/app/components/staking/widgets/TooltipPool.scss
@@ -107,7 +107,7 @@
           display: flex;
           align-items: center;
           justify-content: center;
-          padding: 0 5px 0 4px;
+          padding: 0 4px;
         }
       }
 
