[DDW-317] Handle random stake pool data during the first shelley epochs (#2151)
* [DDW-317]: Add shelley data availability observable

* [DDW-317]: Implement data availability check handler on stake pools

* [DDW-317]: Run translations manager

* [DDW-317]: Update stakepool tooltip

* [DDW-317]: Update changelog

* [DDW-317]: Fix stake pool tooltip style

* [DDW-317]: Update sandclock icon to no data dash

* [DDW-317]: Update japanese translation

* [DDW-317]: Update stake pool no data dash style

* [DDW-317]: Update stake pool tile style

* [DDW-317]: Update stake pool tooltip style

Co-authored-by: Nikola Glumac <niglumac@gmail.com>

--- a/source/renderer/app/components/staking/widgets/ThumbPoolContent.scss
+++ b/source/renderer/app/components/staking/widgets/ThumbPoolContent.scss
@@ -1,8 +1,8 @@
 .component {
-  height: 71px;
+  height: 69px;
   padding: 9px 0 0;
   position: relative;
-  width: 80px;
+  width: 78px;
 
   &.disabled {
     opacity: 0.3;
@@ -99,6 +99,37 @@
 }
 
 .colorBand {
+  border-radius: 0 0 4px 4px;
+  bottom: 0;
+  display: block;
+  height: 5px;
+  left: 0;
+  position: absolute;
+  width: 100%;
+}
+
+.noDataDash {
+  align-items: center;
+  display: flex;
+  justify-content: center;
+
+  :global {
+    .SVGInline {
+      svg {
+        height: 3px;
+        width: 12px;
+
+        path {
+          fill: var(--theme-staking-stake-pool-grey-color) !important;
+          opacity: 1 !important;
+        }
+      }
+    }
+  }
+}
+
+.greyColorBand {
+  background: var(--theme-staking-stake-pool-grey-color);
   border-radius: 0 0 4px 4px;
   bottom: 0;
   display: block;
