--- a/source/renderer/app/components/appUpdate/AppUpdateOverlay.scss
+++ b/source/renderer/app/components/appUpdate/AppUpdateOverlay.scss
@@ -134,13 +134,14 @@
       margin-bottom: 30px;
       :global {
         .SimpleCheckbox_check {
-          border: 2px solid var(--theme-app-update-overlay-text-color);
+          border: 2px solid var(--theme-news-overlay-update-button-text-color);
         }
         .SimpleCheckbox_checked {
           background: var(--theme-news-overlay-update-button-text-color);
           &:after {
             border-color: var(--theme-news-overlay-update-background-color);
           }
+          border: none;
         }
         .SimpleCheckbox_label {
           color: var(--theme-app-update-overlay-text-color);
@@ -155,19 +156,19 @@
       );
       border: 1px solid var(--theme-news-overlay-update-button-text-color);
       color: var(--theme-news-overlay-update-button-text-color);
-      &:hover {
+      cursor: pointer;
+      &:not(.disabled):hover {
         background-color: var(--theme-news-overlay-update-button-text-color);
         color: var(--theme-news-overlay-update-button-hover-text-color);
-        cursor: pointer;
         .externalLinkIcon {
-          @include link(--theme-news-overlay-update-button-hover-text-color);
+          svg path {
+            stroke: var(--theme-news-overlay-update-button-hover-text-color);
+          }
         }
       }
       &.disabled {
-        border-color: var(--theme-app-update-overlay-opacity-text-color);
-        color: var(--theme-app-update-overlay-opacity-text-color);
         cursor: default;
-        opacity: 0.8;
+        opacity: 0.4;
         text-decoration: none;
       }
       .externalLinkIcon {
