[DDW-262] Tooltip promoting password managers

--- a/source/renderer/app/components/staking/delegation-setup-wizard/DelegationSteps.scss
+++ b/source/renderer/app/components/staking/delegation-setup-wizard/DelegationSteps.scss
@@ -9,7 +9,7 @@
   }
 
   .delegationStepsIndicatorWrapper {
-    margin: auto;
+    margin: 4px auto;
     width: 288px;
 
     .stepIndicatorLabel {
