--- a/source/renderer/app/components/staking/redeem-itn-rewards/Step1ConfigurationDialog.scss
+++ b/source/renderer/app/components/staking/redeem-itn-rewards/Step1ConfigurationDialog.scss
@@ -1,4 +1,5 @@
 @import '../../../themes/mixins/error-message';
+
 .component {
   .description {
     font-family: var(--font-regular);
@@ -6,34 +7,55 @@
     line-height: 1.38;
     margin-bottom: 20px;
     text-align: center;
+
     b {
       color: var(--theme-dialog-fullsize-text-highlight-color);
       font-family: var(--font-bold);
     }
+
     .itnLink {
       @extend .description;
+
       &:after {
       }
     }
   }
+
   .recoveryPhrase {
     margin-bottom: 20px;
   }
+
   .walletsDropdownWrapper {
     margin-bottom: 17px;
   }
+
   .walletsDropdown {
     margin-bottom: 20px;
   }
+
   .checkbox {
     margin-bottom: 20px;
+
     &:last-child {
       margin-bottom: 30px;
     }
   }
 }
+
 .error {
   @include error-message;
   margin-bottom: 1rem;
   text-align: center;
+}
+
+:global {
+  .DialogFullSizeOverride_overlay .DialogCloseButton_component,
+  .DialogFullSizeOverride_overlay .SimpleOptions_highlightedOption {
+    background-color: transparent !important;
+    opacity: 1;
+
+    &:hover {
+      background-color: var(--theme-dialog-fullsize-field-background-color) !important;
+    }
+  }
 }
