--- a/source/renderer/app/components/staking/redeem-itn-rewards/Step1ConfigurationDialog.scss
+++ b/source/renderer/app/components/staking/redeem-itn-rewards/Step1ConfigurationDialog.scss
@@ -49,13 +49,16 @@
 }
 
 :global {
-  .DialogFullSizeOverride_overlay .DialogCloseButton_component,
-  .DialogFullSizeOverride_overlay .SimpleOptions_highlightedOption {
+  .DialogFullSizeOverride_overlay .DialogCloseButton_component {
     background-color: transparent !important;
     opacity: 1;
 
     &:hover {
       background-color: var(--theme-dialog-fullsize-field-background-color) !important;
     }
+  }
+
+  .DialogFullSizeOverride_overlay .SimpleOptions_option:hover {
+    background-color: var(--rp-option-bg-color-highlighted) !important;
   }
 }
