DDW-296 Deadalus review fixes

--- a/source/renderer/app/components/staking/info/StakingInfo.scss
+++ b/source/renderer/app/components/staking/info/StakingInfo.scss
@@ -68,7 +68,7 @@
 }
 
 .progressLabelWhite {
-  @extend %regularText;
+  @extend %accentText;
   color: var(--theme-staking-progress-label-light);
   transform: translateX(-8px);
 }
