--- a/source/renderer/app/components/widgets/DialogFullSizeOverride.scss
+++ b/source/renderer/app/components/widgets/DialogFullSizeOverride.scss
@@ -1,5 +1,6 @@
 .overlay {
-  background-color: var(--theme-dialog-fullsize-background-color) !important;
+  background-color: var(--rp-modal-bg-color) !important;
+
   .modal {
     background-color: transparent !important;
     border: none !important;
@@ -8,9 +9,11 @@
     max-width: 740px !important;
     width: 100% !important;
   }
+
   .dialogWrapper {
     position: static;
   }
+
   :global {
     // Background Color Transparent
     .AutocompleteOverrides_autocompleteContent,
@@ -19,24 +22,30 @@
     .SimpleInput_input,
     .SimpleInput_input:focus,
     .SimpleInput_input:hover,
-    .SimpleLink_root,
-    .SimpleOptions_option,
-    .SimpleOptions_option:after {
+    .SimpleLink_root {
       background-color: transparent !important;
     }
+
+    .SimpleOptions_option,
+    .SimpleOptions_option:after {
+      background-color: var(--rp-option-bg-color) !important;
+    }
+
     // Background Color Darker
     .DialogCloseButton_component,
     .SimpleOptions_highlightedOption {
       background-color: var(
-        --theme-dialog-fullsize-field-background-color
+          --theme-nav-dropdown-item-background-color-hover
       ) !important;
     }
+
     // Background Opaque (se same as the normal background, without the opacity)
     .SimpleBubble_bubble {
       background-color: var(
-        --theme-dialog-fullsize-background-color-opaque
+          --theme-dialog-fullsize-background-color-opaque
       ) !important;
     }
+
     // Background Light
     .SelectOverrides_selectInput,
     .SelectOverrides_selectInput:hover {
@@ -44,10 +53,12 @@
         background-color: var(--theme-dialog-fullsize-text-color);
       }
     }
+
     // Text Title color
     .Dialog_title {
       color: var(--theme-dialog-fullsize-title-text-color);
     }
+
     // Text color default
     .Dialog_content,
     .Dialog_dialogWrapper,
@@ -60,12 +71,14 @@
     .SimpleLink_root {
       color: var(--theme-dialog-fullsize-text-color);
     }
+
     // Text color highlight
     .SimpleAutocomplete_autocompleteContent input,
     .SimpleOptions_option,
     .SimpleLink_root {
       color: var(--theme-dialog-fullsize-text-highlight-color);
     }
+
     // Border Color
     .AutocompleteOverrides_autocompleteContent,
     .SelectOverrides_selectInput input,
@@ -77,17 +90,21 @@
     .SimpleOptions_option:after {
       border-color: var(--theme-dialog-fullsize-text-color) !important;
     }
+
     .SimpleLink_root {
       color: var(--theme-dialog-fullsize-text-highlight-color);
+
       &:after {
         background-color: var(
-          --theme-dialog-fullsize-text-highlight-color
+            --theme-dialog-fullsize-text-highlight-color
         ) !important;
       }
     }
+
     .Dialog_dialogWrapper {
       position: static;
     }
+
     .DialogCloseButton_component {
       border-radius: 50%;
       height: 44px;
@@ -96,10 +113,12 @@
       top: 10px;
       width: 44px;
       z-index: 999;
+
       &:hover {
         opacity: 1;
       }
     }
+
     // SVG Fill color
     .DialogCloseButton_component,
     .DialogCloseButton_component:hover,
@@ -112,18 +131,22 @@
     .CheckboxOverrides_check {
       background-color: transparent;
       border-color: var(--theme-splash-network-overlay-button-border-color);
+
       &:after {
         border-color: var(--theme-splash-network-overlay-button-border-color);
       }
+
       &.SimpleCheckbox_checked {
         background-color: var(
-          --theme-splash-network-overlay-button-background-color-hover
+            --theme-splash-network-overlay-button-background-color-hover
         );
+
         &:after {
           border-color: var(--theme-dialog-fullsize-background-color);
         }
       }
     }
+
     .WalletsDropdownOption_label,
     .WalletsDropdownOption_detail {
       color: var(--theme-splash-network-overlay-button-text-color) !important;
@@ -131,9 +154,10 @@
       //   color: var(--theme-splash-network-overlay-button-text-color) !important;
       // }
     }
+
     button.primary {
       background-color: var(
-        --theme-splash-network-overlay-button-background-color
+          --theme-splash-network-overlay-button-background-color
       );
       border: solid 1px var(--theme-splash-network-overlay-button-border-color);
       color: var(--theme-splash-network-overlay-button-text-color);
@@ -143,25 +167,25 @@
 
       &:hover {
         background-color: var(
-          --theme-splash-network-overlay-button-background-color-hover
+            --theme-splash-network-overlay-button-background-color-hover
         );
         border: none;
         color: var(--theme-splash-network-overlay-button-text-color-hover);
       }
+
       &:disabled {
         background-color: var(
-          --theme-splash-network-overlay-button-background-color
+            --theme-splash-network-overlay-button-background-color
         );
-        border: solid 1px
-          var(--theme-splash-network-overlay-button-border-color);
+        border: solid 1px var(--theme-splash-network-overlay-button-border-color);
         color: var(--theme-splash-network-overlay-button-text-color);
         opacity: 0.3;
+
         &:hover {
           background-color: var(
-            --theme-splash-network-overlay-button-background-color
+              --theme-splash-network-overlay-button-background-color
           );
-          border: solid 1px
-            var(--theme-splash-network-overlay-button-border-color);
+          border: solid 1px var(--theme-splash-network-overlay-button-border-color);
           color: var(--theme-splash-network-overlay-button-text-color);
         }
       }
