DDW-296 Deadalus review fixes

--- a/source/renderer/app/components/widgets/DialogFullSizeOverride.scss
+++ b/source/renderer/app/components/widgets/DialogFullSizeOverride.scss
@@ -53,6 +53,7 @@
       background-color: var(
           --theme-dialog-fullsize-background-color-opaque
       ) !important;
+      border: 1px solid var(--theme-dialog-fullsize-text-color) !important;
     }
 
     // Background Light
