--- a/source/renderer/app/components/wallet/backup-recovery/WalletRecoveryPhraseDisplayDialog.scss
+++ b/source/renderer/app/components/wallet/backup-recovery/WalletRecoveryPhraseDisplayDialog.scss
@@ -3,5 +3,15 @@
     .WalletRecoveryInstructions_component {
       text-align: center !important;
     }
+
+    .LoadingSpinner_component {
+      .LoadingSpinner_icon {
+        svg {
+          path {
+            fill: var(--theme-button-primary-text-color-disabled) !important;
+          }
+        }
+      }
+    }
   }
 }
