--- a/source/renderer/app/components/wallet/backup-recovery/WalletRecoveryPhraseEntryDialog.scss
+++ b/source/renderer/app/components/wallet/backup-recovery/WalletRecoveryPhraseEntryDialog.scss
@@ -30,7 +30,14 @@
   }
 }
 
-.isSubmitting {
-  box-shadow: none !important;
-  @include loading-spinner('../../../assets/images/spinner-light.svg');
+:global {
+  .LoadingSpinner_component {
+    .LoadingSpinner_icon {
+      svg {
+        path {
+          fill: var(--theme-button-primary-text-color-disabled) !important;
+        }
+      }
+    }
+  }
 }
