DDW-296 Deadalus review fixes

--- a/source/renderer/app/components/wallet/settings/ChangeSpendingPasswordDialog.scss
+++ b/source/renderer/app/components/wallet/settings/ChangeSpendingPasswordDialog.scss
@@ -41,9 +41,14 @@
 
       :global .ChangeSpendingPasswordDialog_tooltip.SimpleTooltip_root.TooltipOverrides_root.InlineEditingDropdown-tooltip_root.SimpleTooltip_isShowingOnHover {
         height: 12px;
-        left: -73px;
-        top: 4px;
+        left: 136px;
+        position: absolute;
+        top: 54px;
         width: 12px;
+      }
+
+      :global .PasswordInput_root {
+        width: 100%;
       }
 
       :global .InlineEditingDropdown-tooltip_bubble {
