--- a/source/renderer/app/components/wallet/WalletCreateDialog.scss
+++ b/source/renderer/app/components/wallet/WalletCreateDialog.scss
@@ -59,12 +59,16 @@
         width: 12px;
       }
 
+      :global .WalletCreateDialog_tooltip.jpLangTooltipIcon.SimpleTooltip_root.TooltipOverrides_root.InlineEditingDropdown-tooltip_root.SimpleTooltip_isShowingOnHover {
+        left: -40px !important;
+      }
+
       :global .InlineEditingDropdown-tooltip_bubble {
         border-radius: 10px;
         height: 87px;
         left: 125px;
         line-height: 1.2;
-        top: 54px;
+        top: 66px;
         white-space: normal;
         width: 291.5px;
 
