DDW-296 Deadalus review fixes

--- a/source/renderer/app/components/wallet/settings/ChangeSpendingPasswordDialog.scss
+++ b/source/renderer/app/components/wallet/settings/ChangeSpendingPasswordDialog.scss
@@ -47,6 +47,10 @@
         width: 12px;
       }
 
+      :global .ChangeSpendingPasswordDialog_tooltip.jpLangTooltipIcon.SimpleTooltip_root.TooltipOverrides_root.InlineEditingDropdown-tooltip_root.SimpleTooltip_isShowingOnHover {
+        left: 128px !important;
+      }
+
       :global .PasswordInput_root {
         width: 100%;
       }
