--- a/source/renderer/app/components/wallet/wallet-restore/ConfigurationDialog.scss
+++ b/source/renderer/app/components/wallet/wallet-restore/ConfigurationDialog.scss
@@ -7,6 +7,7 @@
     font-size: 16px;
     line-height: 1.38;
     margin-bottom: 20px;
+
     b {
       font-family: var(--font-medium);
     }
@@ -20,10 +21,75 @@
 .spendingPasswordFields {
   display: flex;
   flex-wrap: wrap;
+
+  .spendingPasswordField {
+    display: flex;
+
+    .tooltip {
+      &:hover {
+        .infoIcon {
+          opacity: 0.8;
+        }
+      }
+    }
+
+    :global .ConfigurationDialog_tooltip.SimpleTooltip_root.TooltipOverrides_root.InlineEditingDropdown-tooltip_root.SimpleTooltip_isShowingOnHover {
+      height: 12px;
+      left: -154px;
+      top: 1px;
+      width: 12px;
+    }
+
+    :global .ConfigurationDialog_tooltip.jpLangTooltipIcon.SimpleTooltip_root.TooltipOverrides_root.InlineEditingDropdown-tooltip_root.SimpleTooltip_isShowingOnHover {
+      left: -147px !important;
+    }
+
+    :global {
+      .PasswordInput_root,
+      .SimplePasswordInput_root {
+        width: 100%;
+      }
+    }
+
+    :global .InlineEditingDropdown-tooltip_bubble {
+      border-radius: 10px;
+      height: 87px;
+      left: 124px;
+      line-height: 1.2;
+      top: 69px;
+      white-space: normal;
+      width: 291.5px;
+
+      span[data-bubble-arrow]:before,
+      span[data-bubble-arrow]:after {
+        left: -4%;
+        top: 42%;
+        transform: rotate(90deg);
+      }
+    }
+
+    .infoIcon {
+      height: 14px;
+      margin-left: 6px;
+      opacity: 0.4;
+      transform: translateY(2px);
+      width: 14px;
+
+      path {
+        fill: var(--theme-input-label-color);
+      }
+    }
+
+    :global .PasswordInput_root.spendingPassword,
+    :global .PasswordInput_root.repeatedPassword {
+      width: 100%;
+    }
+  }
 }
 
 .spendingPasswordField {
   flex: 1;
+
   &:first-child {
     margin-right: 10px;
   }
